backend/api/tests/integration/snapshots/integration__image__tag__create.snap
---
source: tests/integration/image.rs
expression: body

---
{
  "index": 3,
  "display_name": "test name",
  "id": "[id]"
}
