backend/api/tests/integration/snapshots/integration__image__tag__update_no_index.snap
---
source: tests/integration/image.rs
expression: body

---
{
  "image_tags": [
    {
      "index": 0,
      "display_name": "test",
      "id": "[id]"
    },
    {
      "index": 1,
      "display_name": "B",
      "id": "[id]"
    },
    {
      "index": 2,
      "display_name": "C",
      "id": "[id]"
    }
  ]
}
