backend/api/tests/integration/snapshots/integration__image__tag__update_only_index.snap
---
source: tests/integration/image.rs
expression: body

---
{
  "image_tags": [
    {
      "index": 0,
      "display_name": "A",
      "id": "[id]"
    },
    {
      "index": 2,
      "display_name": "C",
      "id": "[id]"
    },
    {
      "index": 3,
      "display_name": "B",
      "id": "[id]"
    }
  ]
}
